# naive_fusionnext

./: .gitignore  1.txt  AGENTS.md  README.md  REPO_FILE_MAP.md  fusion.py  fusion_head.py  nuscenes_pipeline.py  pyproject.toml
configs/: fusionnext_nuscenes_mini_3d.py
fusionnext/datasets/: __init__.py  fusionnext_nuscenes_dataset.py
fusionnext/datasets/pipelines/: __init__.py
fusionnext/models/backbones/: __init__.py  fusionnext_backbone.py
fusionnext/models/data_preprocessors/: __init__.py  fusion_det3d_data_preprocessor.py
fusionnext/models/dense_heads/: fusionnext_simple_head.py
fusionnext/models/detectors/: fusionnext.py
fusionnext/models/fusion_models/: fusionnext_core.py
fusionnext/models/layers/: flash_window_block.py
fusionnext/models/serialization/: geometry_serializer.py
fusionnext/models/tokenizers/: image_tokenizer.py  lidar_tokenizer.py
fusionnext/models/utils/: fusion_inputs.py  geometry.py
projects/FusionNeXt/configs/: fusionnext_nuscenes_mini_3d.py
projects/FusionNeXt/fusionnext/datasets/: fusionnext_nuscenes_dataset.py
projects/FusionNeXt/fusionnext/datasets/pipelines/: __init__.py  fusionnext_nuscenes.py
projects/FusionNeXt/fusionnext/models/: __init__.py
projects/FusionNeXt/fusionnext/models/backbones/: fusionnext_backbone.py
projects/FusionNeXt/fusionnext/models/dense_heads/: __init__.py  fusionnext_simple_head.py
projects/FusionNeXt/fusionnext/models/detectors/: __init__.py  fusionnext.py
scripts/: train_fusionnext.py
tools/: train.py  visualize_serialized_frame.py  visualize_sorted_tokens.py
(+7 files in other folders)
